# cider

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: Linux.yml  MacOS.yml
cmake/: Sources.cmake  cider.cmake  clang-format.cmake  common.cmake  gunit.cmake  main.cmake  sources.cmake  thirdparty.cmake  vars.cmake
cmake/3rd/: coverage.cmake
coverage/: CMakeLists.txt  coverage.cpp  coverage.h
experiments/hjson/: CMakeLists.txt
experiments/hjson/results/: coverage_table_root.txt  hjson_decode.cpp_table_report.txt  hjson_encode.cpp_table_report.txt  hjson_parsenumber.cpp_table_report.txt  hjson_value.cpp_table_report.txt
experiments/hjson/tests/: CMakeLists.txt  hjson_test.h  test.cpp  test_marshal.cpp  test_value.cpp
experiments/hjson/tests/coverage_driver/: CMakeLists.txt  coverage_driver.cpp
experiments/hjson/tests/hjson_tests/: CMakeLists.txt  hjson_test.h  test_marshal.cpp  test_value.cpp
experiments/hjson/tests/player/: CMakeLists.txt  hjson_play.cpp
experiments/hjson/tests/recorder/: CMakeLists.txt  hjson_recorder.cpp  hjson_test.h  test_marshal.cpp  test_value.cpp
experiments/pugixml/: CMakeLists.txt
experiments/pugixml/tests/: CMakeLists.txt
experiments/pugixml/tests/coverage_driver/: CMakeLists.txt  coverage_driver.cpp
experiments/pugixml/tests/player/: CMakeLists.txt  player.cpp
experiments/pugixml/tests/pugixml_tests/: CMakeLists.txt  allocator.cpp  helpers.hpp  main.cpp  test.cpp  test.hpp  test_compact.cpp  test_deprecated.cpp  test_document.cpp  test_dom_modify.cpp  test_dom_text.cpp  test_dom_traverse.cpp  test_memory.cpp  test_parse.cpp  test_parse_doctype.cpp  test_unicode.cpp  test_write.cpp  test_xpath.cpp  test_xpath_api.cpp  test_xpath_functions.cpp  test_xpath_operators.cpp  test_xpath_parse.cpp  test_xpath_paths.cpp  test_xpath_paths_abbrev_w3c.cpp  test_xpath_paths_w3c.cpp  test_xpath_variables.cpp  test_xpath_xalan_1.cpp  test_xpath_xalan_2.cpp  test_xpath_xalan_3.cpp  test_xpath_xalan_4.cpp  test_xpath_xalan_5.cpp  writer_string.cpp  writer_string.hpp
experiments/pugixml/tests/recorder/: CMakeLists.txt  pugixml_recorder.cpp
gunit-models/: CMakeLists.txt  aggregate_struct.cpp  aggregate_struct.h  derived_agregate_types.cpp  derived_agregate_types.h  derived_class_types.cpp  derived_class_types.h  enum_test.cpp  enum_test.h  free_functions.cpp  free_functions.h  polymorphic_types.cpp  polymorphic_types.h  some_final_class.cpp  some_final_class.h
harmony/: CMakeLists.txt  harmony.cpp  harmony.h  measurer.cpp  measurer.h  mutator.cpp
models/: CMakeLists.txt  aggregate_struct.cpp  aggregate_struct.h  class_construct.cpp  class_construct.h  compiler_generated_methods.cpp  compiler_generated_methods.h  crossfile_types.cpp  derived_agregate_types.cpp  derived_agregate_types.h  derived_class_types.cpp  derived_class_types.h  enum.cpp  enum.h  enum_test.cpp  final_class.cpp  final_class.h  free_functions.cpp  free_functions.h  models.swig  polymorphic_types.cpp  polymorphic_types.h  some_final_class.cpp  some_final_class.h
models/tests/: CMakeLists.txt  scripts.cpp
recorder/: CMakeLists.txt  actions_observer.h  recorder.cpp  recorder.h
recorder/details/: action.h  generator.cpp  generator.h  params.cpp  params.h  session.cpp  session.h  sink.h  user_data.cpp  user_data.h  utils.cpp  utils.h
recorder/details/lua/: lua_func.cpp  lua_func.h  lua_params.cpp  lua_params.h
recorder/tests/: CMakeLists.txt  generator_tests.cpp  params_test.cpp  recording_test.cpp  user_action_test.cpp
scripting/: CMakeLists.txt  interpreter.cpp  interpreter.h
swig/lua/: main.swig  types.swig
tests/: CMakeLists.txt  aggregate_struct_test.cpp  aggregate_with_functions_struct_test.cpp  compiler_generated_methods_test.cpp  crossfile_types_test.cpp  derived_aggregate_types_test.cpp  derived_class_types_test.cpp  enum_test.cpp  final_class_test.cpp  free_functions_test.cpp  polymorphic_types_test.cpp  reference_return_test.cpp  standart_types_test.cpp  tests.cpp
tests/models/: CMakeLists.txt  aggregate_struct.cpp  aggregate_struct.h  aggregate_with_functions.cpp  aggregate_with_functions.h  compiler_generated_methods.cpp  compiler_generated_methods.h  crossfile_types.cpp  crossfile_types.h  derived_agregate_types.cpp  derived_agregate_types.h  derived_class_types.cpp  derived_class_types.h  enum.cpp  enum.h  final_class.cpp  final_class.h  free_functions.cpp  free_functions.h  polymorphic_types.cpp  polymorphic_types.h  reference_return.cpp  reference_return.h  standart_types.cpp  standart_types.h
tests/utils/: main.cpp  test_suite.cpp  test_suite.h
tools/: ast.cpp
tools/cider/: CMakeLists.txt  ast_handler.h  generator.cpp  generator.h  lua.cpp  lua.h  main.cpp  metadata.cpp  metadata.h  mutator.cpp  mutator.h  namespaces_stack.cpp  namespaces_stack.h  options.cpp  options.h  printers.cpp  printers.h  swig.cpp  swig.h  utils.cpp  utils.h
tools/coverage/coverage_driver/: CMakeLists.txt  coverage_driver.cpp
tools/coverage/table_printer/: CMakeLists.txt  table_printer.cpp
tools/gunit/: CMakeLists.txt  ast_handler.h  generator.cpp  generator.h  lua.cpp  lua.h  main.cpp  metadata.cpp  metadata.h  namespaces_stack.cpp  namespaces_stack.h  options.cpp  options.h  printers.cpp  printers.h  swig.cpp  swig.h  utils.cpp  utils.h
utils/: call_utils.h  convert_utils.h  numeric_cast.h  type_utils.h
wrapper/: CMakeLists.txt  models.swig
wrapper/tests/: CMakeLists.txt  scripts.cpp
